[gd_scene load_steps=4 format=3 uid="uid://d0wrkoc07qxx3"]

[ext_resource type="Script" path="res://Scripts/PlayerBullet.gd" id="1_q0ebr"]
[ext_resource type="Texture2D" uid="uid://cdw0xw6uxnyj" path="res://blend_files/aerial_drop.png" id="2_o26j5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8alv3"]
radius = 8.62076

[node name="Bullet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 257
lock_rotation = true
max_contacts_reported = 2
contact_monitor = true
script = ExtResource("1_q0ebr")
metadata/ink_level = 0.0

[node name="SpriteHolder" type="Node2D" parent="."]
position = Vector2(0, 8.5)

[node name="Drop" type="Sprite2D" parent="SpriteHolder"]
position = Vector2(0, -8.5)
scale = Vector2(0.02, 0.02)
texture = ExtResource("2_o26j5")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="SpriteHolder"]
position = Vector2(0, -8.5)
remote_path = NodePath("../../CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8alv3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
